created containers for main sections of the body

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 
 <body>
-    
+    <div class="title-area">Tic-Tac-Toe</div>
+
+    <div class="game-container">
+    </div>
+
+    <div class="message-area">
+    </div>
+
+    <div class="buttons-container">
+    </div>
 </body>
 </html>
