fixed the button container name, added a button to be used to reset the game.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div class="message-area">
     </div>
 
-    <div class="buttons-container">
+    <div class="button-container">
+        <button type="button">New Game</button>
     </div>
 </body>
 </html>
