added 9 tiles for the games with dummy text for x and o symbol

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div class="title-area">Tic-Tac-Toe</div>
 
     <div class="game-container">
+        <div class="tile">⊙</div>
+        <div class="tile">×</div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
     </div>
 
     <div class="message-area">
