--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
     <div class="title-area">Tic-Tac-Toe</div>
 
     <div class="game-container">
-        <div class="tile">⊙</div>
-        <div class="tile">×</div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
+        <div data-tile1 class="tile">⊙</div>
+        <div data-tile2 class="tile">×</div>
+        <div data-tile3 class="tile"></div>
+        <div data-tile4 class="tile"></div>
+        <div data-tile5 class="tile"></div>
+        <div data-tile6 class="tile"></div>
+        <div data-tile7 class="tile"></div>
+        <div data-tile8 class="tile"></div>
+        <div data-tile9 class="tile"></div>
     </div>
 
-    <div class="message-area">
-    </div>
+    <div data-message class="message-area"></div>
 
     <div class="button-container">
-        <button type="button">New Game</button>
+        <button data-new-game type="button">New Game</button>
     </div>
 </body>
 </html>
