--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <div class="title-area">Tic-Tac-Toe</div>
 
     <div class="game-container">
-        <div data-tile1 class="tile">⊙</div>
-        <div data-tile2 class="tile">×</div>
-        <div data-tile3 class="tile"></div>
-        <div data-tile4 class="tile"></div>
-        <div data-tile5 class="tile"></div>
-        <div data-tile6 class="tile"></div>
-        <div data-tile7 class="tile"></div>
-        <div data-tile8 class="tile"></div>
-        <div data-tile9 class="tile"></div>
+        <div data-tiles data-tile1 class="tile">⊙</div>
+        <div data-tiles data-tile2 class="tile">×</div>
+        <div data-tiles data-tile3 class="tile"></div>
+        <div data-tiles data-tile4 class="tile"></div>
+        <div data-tiles data-tile5 class="tile"></div>
+        <div data-tiles data-tile6 class="tile"></div>
+        <div data-tiles data-tile7 class="tile"></div>
+        <div data-tiles data-tile8 class="tile"></div>
+        <div data-tiles data-tile9 class="tile"></div>
     </div>
 
     <div data-message class="message-area"></div>
