removed dummy innerText

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="title-area">Tic-Tac-Toe</div>
 
     <div class="game-container">
-        <div data-tiles data-tile1 class="tile">⊙</div>
-        <div data-tiles data-tile2 class="tile">×</div>
+        <div data-tiles data-tile1 class="tile"></div>
+        <div data-tiles data-tile2 class="tile"></div>
         <div data-tiles data-tile3 class="tile"></div>
         <div data-tiles data-tile4 class="tile"></div>
         <div data-tiles data-tile5 class="tile"></div>
